# fuse-od-source

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  compat.h  configure.ac  display.c  display.h  fuse.c  input.c  input.h  keyboard.c  keysyms.pl  machine.h  menu.c  menu.h  settings.pl  sound.c  sound.h  tape.c  ui.c  uimedia.c  utils.c  utils.h
Platform/: ChangeLog  INSTALL.txt  Makefile.commonrules  VERSION  readme.txt
Platform/GCW0/: Makefile  default.gcw0.desktop  system.gcw0.desktop
Platform/LEPUS/: Makefile  default.lepus.desktop  system.lepus.desktop
Platform/RETROFW1.0/: Makefile  conffiles  control  fuse.lnk  zxspectrum.fuse.lnk
Platform/RETROFW2.0/: Makefile  default.retrofw.desktop  system.retrofw.desktop
Platform/roms/: read.me
compat/: Makefile.am
compat/linux/: dir.c  paths.c  regex.c
compat/unix/: file.c  paths.c
controlmapping/: Makefile.am  controlmapping.c  controlmapping.h  settings-header.pl  settings.pl
infrastructure/: startup_manager.h
machines/: tc2068.c  ts2068.c
peripherals/: joystick.c  joystick.h
savestates/: Makefile.am  savestates.c  savestates.h
sound/: alsasound.c  sdlsound.c
timer/: timer.c
ui/: Makefile.am  hotkeys.h  ui.h  uijoystick.h  vkeyboard.h
ui/scaler/: scalers.c
ui/sdl/: Makefile.am  sdldisplay.c  sdldisplay.h  sdlhotkeys.c  sdlui.c
ui/widget/: Makefile.am  about.c  binary.c  browse.c  controlmapping.c  debugger.c  error.c  filesel.c  memory.c  menu.c  options.pl  picture.c  pokefinder.c  pokemem.c  query.c  roms.c  savestate_sel.c  select.c  text.c  vkeyboard.c  widget.c  widget.h  widget_internals.h
